fix item wrapping on dual trade windows

--- a/mod/ui/style.css
+++ b/mod/ui/style.css
@@ -141,6 +141,7 @@ body.superDark {
 
 .kmm-dual-trade-items {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 .kmm-dual-trade-divider {
